@@ -4,7 +4,7 @@
 
 PoCC, the POlyhedral Compiler Collection package
 
--*- version 1.0-beta -*-
+-*- version 1.0-beta-r2 -*-
 
 
 * Installation
