@@ -7,8 +7,8 @@
 @settitle PoCC - The Polyhedral Compiler Collection package
 
 @set EDITION 0.1
-@set VERSION 1.0-beta
-@set UPDATED April 27th 2009
+@set VERSION 1.0-beta-r2
+@set UPDATED July 26th 2009
 @setchapternewpage odd
 
 
@@ -84,7 +84,7 @@ GNU Free Documentation License, write to the Free Software Foundation, Inc.,
 
 PoCC is a full compiler for polyhedral optimization. It leverages most
 of the state-of-the-art polyhedral tools in the public domain, resulting
-in a flexible compiler.
+in a flexible and powerful compiler.
 
 @*
 @b{Communication}: three groups are available for subscription
@@ -108,7 +108,7 @@ There is a Doxygen documentation of the API available in
 @* 
 @b{License}: PoCC is released under the terms of the GNU General
 Public License version 2 and later. The software it uses is released
-under the terms of the GNU GPL v2 or GNU Lesser GPL v3.
+under the terms of the GNU GPL v2 or later, and GNU Lesser GPL v2 or later.
 @*
 
 @*
@@ -172,10 +172,19 @@ $> export PATH=`pwd`/bin:$PATH
 @end cartouche
 
 
+@* 
+In the current development version, we resorted to ship a standard
+version of GMP. This is required by ISL, which is required by CLooG. By
+default, the configuration of GMP is forced to use the 32bits ABI. To
+change this, for instance because PoCC is being installed on a 64bits
+operating system, modify the variable @code{GMP_ABI_FORCE} at the
+beginning of @code{install.sh}.
+@*
+
 
 @*
 Finally, to test that the compiler works, use the @code{gemver.c} file
-at the root of the archive for a test run.  
+at the root of the archive for a test run. 
 @*
 
 @cartouche
@@ -183,6 +192,18 @@ at the root of the archive for a test run.
 $> pocc gemver.c
 @end example
 @end cartouche
+
+@*
+It is @b{strongly recommended} to run the @code{make check} command, to
+ensure the compiler works properly on sanity benchmarks at least.
+@*
+
+@cartouche
+@example
+$> make check
+@end example
+@end cartouche
+
 
 @c % /*************************************************************************
 @c % /*************************************************************************
@@ -204,7 +225,8 @@ must be a regular static control part: a consecutive set of statements
 with only for loops, where loop bounds, @code{if} statement conditionals
 and array accesses are affine functions of the iterators and the global
 parameters. The ternary operator can be used to provide data-dependent
-code.
+code, where the control will be over-approximated to both clauses being
+executed for all possible executions.
 @*
 
 @cartouche
@@ -279,6 +301,7 @@ These are the available options for PoCC.
 @item @code{-h}, @code{--help} Print this help
 @item @code{-v}, @code{--version} Print version information
 @item @code{-o}, @code{--output <arg>} Output file [filename.pocc.c]
+@item @code{--bounded-ctxt} Parser: bound all global parameters >= -1 [off]
 @item @code{-d}, @code{--delete-files} Delete files previously generated by PoCC [off]
 @item @code{--verbose} Verbose output [off]
 @item @code{--quiet} Minimal output [off]
